--- a/index.html
+++ b/index.html
@@ -5,8 +5,34 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="container">
+            <nav class="header__nav">
+                <a href="#!" class="logo">
+                    <img src="images/WD.png" alt="">
+                </a>
+                <ul class="header__nav-list">
+                    <li><a href="#!" class="header__nav-link">ГЛАВНАЯ</a></li>
+                    <li><a href="#!" class="header__nav-link">ОБ АВТОРЕ</a></li>
+                    <li><a href="#!" class="header__nav-link">РАБОТЫ</a></li>
+                    <li><a href="#!" class="header__nav-link">ПРОЦЕСС</a></li>
+                    <li><a href="#!" class="header__nav-link">КОНТАКТЫ</a></li>
+                </ul>
+            </nav>
+            <div class="header__content">
+                <div class="header__content-left">
+                    <img src="images/Frame.png" alt="" class="header__content-img">
+                </div>
+                <div class="header__content-right">
+                    <h1 class="header__content-title">Дизайн и верстка</h1>
+                    <p class="header__content-text">Lorem Ipsum - это текст-"рыба", часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной "рыбой" для текстов на латинице с начала XVI века.</p>
+                    <a href="#!" class="header__content-btn">НАПИСАТЬ МНЕ</a>
+                </div>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
