--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="container">
             <nav class="header__nav">
                 <a href="#!" class="logo">
-                    <img src="images/WD.png" alt="">
+                    <img src="img/WD.png" alt="">
                 </a>
                 <ul class="header__nav-list">
                     <li><a href="#!" class="header__nav-link">ГЛАВНАЯ</a></li>
@@ -24,7 +24,7 @@
             </nav>
             <div class="header__content">
                 <div class="header__content-left">
-                    <img src="images/Frame.png" alt="" class="header__content-img">
+                    <img src="img/Frame.png" alt="" class="header__content-img">
                 </div>
                 <div class="header__content-right">
                     <h1 class="header__content-title">Дизайн и верстка</h1>
